--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									I'm Kirthy Rajan completed MCA Post graduate at <br>S. A. Engineering college with a Current CGPA of 8.3 
+									I'm Kirthy Rajan recently completed MCA Post graduate at <br>S. A. Engineering college with a CGPA of 8.7 
 								</h3>
 								<p>
             						Seeking an Entry level Position. I would like to build a career by making the best of my
@@ -216,7 +216,7 @@ Creative, Logical and Analytic skills to <br>perform the job efficiently.
 										</h4>
 										<h5>Chennai, Tamil Nadu</h5>
 										<p class="description">
-											Recently Completed Post graduation with a current academic score of 8.3 CGPA. 
+											Recently Completed Post graduation with a current academic score of 8.7 CGPA. 
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
@@ -262,7 +262,7 @@ Creative, Logical and Analytic skills to <br>perform the job efficiently.
 										</h4>
 										<h5>Chennai, Tamil Nadu</h5>
 										<p class="description">
-											Completed my schooling with a academic score of 65% 
+											Completed my schooling with a academic score of 64% 
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
